--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
@@ -21,12 +22,18 @@ jobs:
       - name: Copy build output to /public
         run: |
           rm -rf public/*
+          mkdir -p public
           cp -r home/dist/* public/
-          
+
       - name: Commit updated public folder
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add public
-          git commit -m "Deploy website" || echo "No changes to commit"
-          git push
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+
+          git add -A
+
+          # Prevent exit 128 if no changes
+          git diff-index --quiet HEAD || git commit -m "Deploy"
+          
+      - name: Push
+        run: git push
