updated config.yml decap wrangler pattern

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,7 +5,7 @@ backend:
   auth_scope: repo
   client_id: Ov23li8aeOf71Xru85St
   login: true
-  base_url: https://decap.anirudhxplorer.workers.dev/
+  base_url: https://decap-proxy.anirudhxplorer.workers.dev/
   auth_endpoint: "/auth"
 
 media_folder: "assets/uploads"
