--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "postbuild": "node ../move-build.js"
+    "postbuild": "node ../scripts/move-build.js"
   },
   "dependencies": {
     "marked": "^17.0.1",
